Fixing pen spacing issue

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -10,6 +10,10 @@ body{
 }
 
 #header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
   width: 100vw;
   display: flex;
   background-color: #cdbea8;
